--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head> 
 <body> 
     <header> 
-        <nav> 
-            <img src="./images/Web.jpg" alt="logo image " height="13">
-    <a href="/">STUDIO     
+        <nav>                   
+            <a href="./index.html">WebStudio</a>
     </a> 
     <ul> 
         <li><a href="">Studio</a></li> 
@@ -121,8 +120,7 @@
  </section> 
     </main> 
     <footer> 
-        <img src="./images/Web.jpg" alt="logo image " height="13">
-        <a href="/">STUDIO     
+        <a href="./index.html">WebStudio</a> 
         </a> 
         <p>          
 Increase the flow of customers and  
@@ -131,4 +129,4 @@ sales for your business with digital
         </p> 
     </footer> 
 </body> 
-</html>
+</html> 
